--- a/app/views/pets/_form.html.erb
+++ b/app/views/pets/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@pet) do |f| %>
+<%= form_for @pet, html: { multipart: true } do |f| %>
   <% if @pet.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@pet.errors.count, "error") %> prohibited this pet from being saved:</h2>
@@ -22,6 +22,12 @@
   <div class="field">
     <%= f.label :image %><br>
     <%= f.text_field :image %>
+	<% if f.object.image? %>
+		<%= image_tag f.object.image.thumb.url %> <!-- If there is an image, we display the image and the option to remove it -->
+		<%= f.label :remove_image %>
+		<%= f.check_box :remove_image %>
+		<!-- add `remove_image` action on your pets controller -- >
+	<% end %>
   </div>
   <div class="actions">
     <%= f.submit %>
