--- a/app/views/pets/_form.html.erb
+++ b/app/views/pets/_form.html.erb
@@ -21,12 +21,12 @@
   </div>
   <div class="field">
     <%= f.label :image %><br>
-    <%= f.text_field :image %>
+    <%= f.file_field :image %>
 	<% if f.object.image? %>
 		<%= image_tag f.object.image.thumb.url %> <!-- If there is an image, we display the image and the option to remove it -->
 		<%= f.label :remove_image %>
 		<%= f.check_box :remove_image %>
-		<!-- add `remove_image` action on your pets controller -- >
+		<!-- add `remove_image` action to your params in controller -- >
 	<% end %>
   </div>
   <div class="actions">
